Attempt to fix fonts not being used on iPhone + shift from ubuntu to poppins

--- a/Calcium.Toolkit/Oxide/Sections/Metrics.razor.css
+++ b/Calcium.Toolkit/Oxide/Sections/Metrics.razor.css
@@ -33,5 +33,5 @@
 
         .metrics-items .item .title { margin: 1.5rem 0 0; }
         .metrics-items .item .caption {
-            margin: -0.375rem 0 0 0.075rem
+            margin: 0;
         }
