--- a/Calcium.Web/wwwroot/css/_design.system.css
+++ b/Calcium.Web/wwwroot/css/_design.system.css
@@ -1,11 +1,12 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Bevan&display=swap');
 /*@import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');*/
 
 :root {
     /* Base Colors */
     --white: #FFF;
     --black: #000;
+
     /* Primary Colors */
     --primary-200: #A9BDEB;
     --primary-300: #7F9DE2;
@@ -14,6 +15,7 @@
     --primary-600: #2149A5;
     --primary-700: #19377C;
     --primary-800: #102452;
+
     /* Secondary Colors */
     --secondary-200: #FEF9EB;
     --secondary-300: #FEF8E6;
@@ -23,27 +25,33 @@
     --secondary-600: #F6A912;
     --secondary-700: #FC8154;
     --secondary-800: #CA6743;
+
     /* Body Colors */
     --body-300: #A6A8A9;
     --body-400: #646669;
     --body-500: #212529;
     --body-600: #171A1D;
     --body-700: #0D0F10;
+
     /* Contrast Colors */
     --primary-contrast: #FFF;
     --secondary-contrast: #212529;
     --body-contrast: #FFF;
+
     /* Gradient Colors */
     --gradient-highlight-stop-1: #F6A912;
     --gradient-highlight-stop-2: #FC8154;
+
     /* Border Radius*/
     --border-radius: 0.25rem;
+
     /* Margins */
     --margin-500: 5rem;
     --margin-400: 3rem;
     --margin-300: 2rem;
     --margin-200: 1rem;
     --margin-100: 0.5rem;
+
     /* Font Sizes */
     /*--fs-600: 1.75rem;
     --fs-550: 1.625rem;
@@ -54,8 +62,8 @@
     --fs-150: 1rem;
     --fs-100: 1rem;
     --fs-50: 0.65rem;*/
-    --fs-600: 2rem;
-    --fs-550: 1.625rem;
+    --fs-600: 1.9rem;
+    --fs-550: 1.75rem;
     --fs-500: 1.625rem;
     --fs-400: 1.375rem;
     --fs-300: 1.25rem;
@@ -63,13 +71,14 @@
     --fs-150: 1rem;
     --fs-100: 1rem;
     --fs-50: 0.65rem;
+
     /* Line Heights */
     --lh-600: 1.25;
 }
 
 html {
     min-width: 360px;
-    font-family: 'Ubuntu', 'Segoe UI', -apple-system, BlinkMacSystemFont, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', 'Segoe UI', -apple-system, BlinkMacSystemFont, Geneva, Verdana, sans-serif;
     font-size: var(--fs-100);
     font-weight: 400;
     line-height: 1.4;
@@ -80,12 +89,12 @@ html {
 @media screen and (min-width: 425px) {
     :root {
         /* Font Sizes */
-        --fs-600: 2rem;
+        --fs-600: 1.9rem;
         --fs-550: 1.75rem;
         --fs-500: 1.625rem;
         --fs-400: 1.375rem;
         --fs-300: 1.25rem;
-        --fs-200: 1.15rem;
+        --fs-200: 1rem;
         --fs-150: 1rem;
         --fs-100: 1rem;
         --fs-50: 0.65rem;
